# psend

./: .gitignore  README.md  notes.txt  pyproject.toml
pnotify-send/: __main__.py
pnotify_send/: __main__.py
psend/: __init__.py  __main__.py  functions.py
