[tool.poetry]
name = "pnotify-send"
version = "0.1.0"
description = "Utility to send push notification."
authors = ["Sandro Spadaro <sandro.spadaro@gmail.com>"]
readme = "README.md"
packages = [{include = "pnotify-send"}]
license = "Apache-2.0"
repository = "https://github.com/sandrospadaro/pnotify-send"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pnotify-send = "pnotify-send.__main__:main"