[tool.poetry]
name = "psend"
version = "0.1.9"
description = "Utility to send push notification."
authors = ["Sandro Spadaro <sandro.spadaro@gmail.com>"]
readme = "README.md"
packages = [{include = "psend"}]
license = "Apache-2.0"
repository = "https://github.com/sandrospadaro/psend"

[tool.poetry.dependencies]
python = ">=2.7 <4.0"
requests = [{ version = "^2.28.1", python = "^3.8" }, { version = "^2.27.1", python = "^2.7" }]
argparse = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
psend = "psend.functions:main"